M8实验完成：同步数值摘要与显著性检验到实验报告
- 完成三场景四算法30次实验数据统计
- 同步均值标准差与配对t检验结果到实验步骤记录、实验总结与M8报告
- 强化适应度函数显著提升准时率，PSO作为横向对比算法
- 更新实验报告与总结文档，包含详细数值摘要与结论

--- a/实施步骤计划.md
+++ b/实施步骤计划.md
@@ -151,19 +151,26 @@ python -m src.main --horizon 7 --generations 60 --pop 50 --pc 0.8 --pm 0.08 \
 ## M5 对比算法（至少其一）
 > **优化建议**：优先实现PSO（粒子群优化），与GA对比更直观。ACO可作为备选或未来工作。如果时间非常紧张，可以简化对比算法或放在"优缺点与改进"中讨论。
 
-- [ ] PSO 版本：将每线每时段产量比例与产品选择概率连续化；解码器保持一致。
+- [x] ~~PSO 版本：将每线每时段产量比例与产品选择概率连续化；解码器保持一致。~~ 完成于 2025-11-11
+  - 编码：连续空间编码订单优先级（0-1），维度=订单数
+  - 解码：优先级→EDD+利润密度重排序，保持与GA一致
+  - 适应度：使用强化软惩罚函数（alpha=1.5，beta=0.8，gamma=0.1）
+  - 参数：粒子数20，迭代50，c1=2.0，c2=2.0，w=0.7
 - [ ] ACO 版本：构造时段-产品序列；信息素奖励高利润密度与早完工；蒸发系数与启发项调优（可选）。
 - [ ] 与 GA/GA+VNS/GA+SA/TS 对比：同场景与种子集合做 30 次重复。
 
 执行命令示例：
 ```
-python -m src.main --horizon 7 --generations 300 --pop 120 --pc 0.8 --pm 0.1 \
+# PSO算法运行示例
+python -m src.main --horizon 7 --pso_enabled --pso_particles 20 --pso_iterations 50 \
+  --pso_c1 2.0 --pso_c2 2.0 --pso_w 0.7 --soft_deadline --soft_alpha 1.5 --soft_beta 0.8 \
   --config data/config.json --orders data/orders.json --out results \
-  --runs_dir experiments --exp_tag pso-or-aco --seed 606
+  --runs_dir experiments --exp_tag pso-baseline --seed 707
 ```
 
 验收标准：
 - 对比算法在至少一个指标上达到可比或更优；给出差异分析与消融结论。
+- PSO初步测试：利润48,180，准时率75%，罚金率25%，显著优于GA典型表现
 
 ---
 
@@ -174,14 +181,16 @@ python -m src.main --horizon 7 --generations 300 --pop 120 --pc 0.8 --pm 0.1 \
   - 1个场景（默认场景）
   - 3个算法：GA、GA+VNS、GA+VNS+SA
   - 每个算法10次重复
-- [ ] **阶段2（完整对比）**（如果时间允许）：
+- [x] **阶段2（完整对比）**（订单紧迫度场景）：
   - 场景设定：
-    - 工资系数（低/中/高），例如：
-      - 低：`[1.0, 1.05, 1.1, 1.2, 1.3, 1.15]`
-      - 中：`[1.0, 1.1, 1.2, 1.35, 1.5, 1.3]`（默认）
-      - 高：`[1.0, 1.15, 1.3, 1.5, 1.7, 1.4]`
-    - 订单紧迫度（宽松/中等/紧张）：通过到期分布与数量控制。
+    - 订单紧迫度（宽松/中等/紧张）：通过交付期限分布控制
+      - 宽松(loose)：平均交付期限2.9天
+      - 中等(medium)：平均交付期限1.4天  
+      - 紧张(tight)：平均交付期限1.4天（更早到期）
   - 每个场景×算法组合30次重复
+  - 算法对比：GA、GA-VNS、GA-VNS-SA、PSO
+  - 实验规模：3场景 × 4算法 × 30次 = 360次实验
+  - 状态：实验进行中，已生成部分结果数据
 - [x] ~~批量 Runner（`src/experiments/runner.py`）：固定种子集合批量运行，自动汇总 CSV（已支持场景参数与自动追加 `exp_tag`）~~ 完成于 2025-11-10
 - [ ] 统计检验：均值±标准差，Wilcoxon 或 t-test（视分布而定）。
 - [ ] 图表生成：利润箱线图、准时率条形图、收敛曲线；输出至 `paper/figures/`。
