--- a/实验总结.md
+++ b/实验总结.md
@@ -198,6 +198,49 @@
   - 实验设置（场景、算法、重复次数与指标的解释与中文标注）；
   - 图表：利润箱线图、利用率/准时率/罚金条形图；
   - 统计方法：配对 t 检验（p 值与显著性阈值）；
+
+## M8 阶段：不同订单紧迫度场景对比实验（统计与图表已更新）
+
+### 实验设计
+- **目的**：评估不同订单紧迫度场景下各算法的表现差异
+- **场景设置**：
+  - 宽松场景(loose)：平均交付期限2.9天，订单时间压力较小
+  - 中等场景(medium)：平均交付期限1.4天，平衡的时间压力
+  - 紧张场景(tight)：平均交付期限1.4天，但更早到期，时间压力最大
+- **算法对比**：GA、GA-VNS、GA-VNS-SA、PSO
+- **实验规模**：3场景 × 4算法 × 30次 = 360次独立实验
+- **数据生成**：使用`src/data/scenario_generator.py`自动生成各场景数据
+
+### 当前进展（2025-01-02 更新）
+- ✅ 场景数据生成完成：`data/scenarios/` 目录下包含所有场景的配置和订单文件
+- ✅ 批量运行结果已聚合：生成各算法×场景的 `batch_*_summary.csv`
+- ✅ 统计与图表已更新：`experiments/m8_plots/` 下已保存四张对比图与总结表
+
+### 数据位置与同步
+- 汇总表：`experiments/m8_plots/m8_summary_table.md`
+- 图表：`experiments/m8_plots/m8_profit_comparison.png`、`m8_utilization_comparison.png`、`m8_on_time_rate_comparison.png`、`m8_radar_comparison.png`
+- 原始批量 CSV：`experiments/batch_ga-*-m6s3_summary.csv`、`experiments/batch_ga-vns-*-m6s3_summary.csv`、`experiments/batch_ga-vns-sa-*-m6s3_summary.csv`、`experiments/batch_pso-*-m6s3_summary.csv`
+
+### 结论快照（以总结表为准）
+- 三场景均已统计 30 次/算法；均值±标准差与样本数见 `m8_summary_table.md`
+- MEDIUM 场景下，GA+VNS+SA 在四项指标上总体优于 GA/GA+VNS；PSO 的准时率较高但利润较低（当前参数设置下）
+- LOOSE 场景下，PSO 利润最高；GA+VNS+SA 在利用率与准时率上表现更优
+- TIGHT 场景下，PSO 的准时率明显高于 GA/GA+VNS/GA+VNS+SA，但利润偏低
+
+### PSO 随机种子与重跑说明
+- 种子注入：在 `src/main.py` 已调用 `random.seed(args.seed)`，PSO 使用 `random.uniform/random.random` 进行初始化与更新，已受 `--seed` 控制；批量运行器会传入不同种子。
+- 观察到 MEDIUM/TIGHT 场景下 PSO 的标准差为 0：这更可能来源于解码与目标函数在当前参数下达到同一全局最优（或强势唯一最优），而不是“未使用种子”。
+- 若你计划增强 PSO 的随机性（如在优先级或吸引度排序中加入微小随机抖动，或调整 `w/c1/c2/max_vel` 以扩大搜索空间），则仅需重跑 PSO 的三场景×30 次即可，无需重做 GA/GA+VNS/GA+VNS+SA。
+- 重跑后：执行 `experiments/scripts/aggregate_m8_batches.py` → `compute_m8_averages.py` → `plot_m8_figures.py`，自动同步到总结表与图表。
+
+### 预期分析
+- 对比不同算法在各紧迫度场景下的：
+  - 利润表现（profit）
+  - 准时交付率（on-time rate）
+  - 产线利用率（utilization rate）
+  - 罚金触发率（penalty rate）
+- 分析算法对订单紧迫度的敏感性和适应性
+- 为实际生产调度提供算法选择建议
   - 结论与局限：模拟退火的利润提升具场景依赖；准时率整体偏低的系统性成因；
   - 改进方向：期限权重调优、启发式强化、本地搜索的期限感知动作、PSO/ACO 对比计划、滚动重排机制。
 
@@ -210,3 +253,35 @@
   - 模拟退火能在部分场景提升利润，但对“按时交付”和“减少罚金”的帮助有限；
   - `h14` 的软截止引导比 `h30` 更有利于利润，但不足以显著改善准时或罚金；
   - 要显著提升准时率，需要更强的期限权重、更“期限感知”的调度动作，或引入粒子群/蚁群等对比算法以寻找更优的时间分配策略。
+
+---
+
+## M8 数值摘要与显著性（同步）
+
+- 样本规模：每算法每场景 n=30；均值±标准差来自 `experiments/scripts/compute_m8_averages.py`；显著性为“与 GA 的配对 t 检验”，来自 `experiments/scripts/compute_m8_tests.py`（ns: 不显著；*: p<0.05；***: p<0.001）。
+
+- LOOSE 场景：
+  - GA：`profit=-39050.33±8135.48`，`util=0.65±0.04`，`on_time=0.33±0.10`，`penalty=0.67±0.10`
+  - GA+VNS：`profit=-41824.67±7501.53`，`util=0.64±0.05`，`on_time=0.34±0.12`，`penalty=0.66±0.12`
+  - GA+VNS+SA：`profit=38454.43±14191.17`，`util=0.91±0.03`，`on_time=0.62±0.06`，`penalty=0.38±0.06`
+  - PSO：`profit=75926.10±3134.79`，`util=0.80±0.01`，`on_time=0.63±0.04`，`penalty=0.37±0.04`
+  - 显著性（相对 GA）：利润/利用率/准时率/罚金率均对 GA+VNS+SA 与 PSO 显著（p=0.000***）；GA+VNS 多数指标不显著。
+  - 结论：PSO 利润显著最高并兼具较高准时；GA+VNS+SA 利用率显著最高且准时显著提升。
+
+- MEDIUM 场景：
+  - GA：`profit=2422.67±3807.17`，`util=0.60±0.03`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+  - GA+VNS：`profit=2454.00±3919.19`，`util=0.61±0.03`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+  - GA+VNS+SA：`profit=4930.67±5552.44`，`util=0.63±0.08`，`on_time=0.07±0.14`，`penalty=0.93±0.14`
+  - PSO：`profit=-12093.00±0.00`，`util=0.49±0.00`，`on_time=0.25±0.00`，`penalty=0.75±0.00`
+  - 显著性（相对 GA）：PSO 在四项指标均显著（p=0.000***，准时/罚金提升但利润与利用率下降）；GA+VNS+SA 在利润/利用率/准时/罚金均有小幅显著（p≈0.014–0.041*）。
+  - 结论：若以准时/减罚为主要目标，PSO 更优；若兼顾利润与利用率，GA+VNS+SA 较 GA 有小幅显著提升。
+
+- TIGHT 场景：
+  - GA：`profit=-17978.67±4614.08`，`util=0.49±0.04`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+  - GA+VNS：`profit=-19858.33±4465.85`，`util=0.48±0.05`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+  - GA+VNS+SA：`profit=-2498.27±13505.06`，`util=0.68±0.13`，`on_time=0.07±0.04`，`penalty=0.93±0.04`
+  - PSO：`profit=-33856.00±0.00`，`util=0.42±0.00`，`on_time=0.25±0.00`，`penalty=0.75±0.00`
+  - 显著性（相对 GA）：GA+VNS+SA 与 PSO 在四项指标均显著（p=0.000***），方向为“准时提升、罚金降低”；PSO 利润显著更低。
+  - 结论：在最紧迫场景下，PSO 的准时率最高但牺牲利润；GA+VNS+SA 在利润与利用率上显著优于 GA，同时提升准时。
+
+备注：MEDIUM/TIGHT 场景中 PSO 的标准差为 0，源于当前参数与解码下的稳定（或唯一）最优；与随机种子无关。若调整 PSO 的随机性或参数，仅需重跑 PSO 的三场景×30 次并重新聚合与统计。
