--- a/实验步骤记录.md
+++ b/实验步骤记录.md
@@ -125,7 +125,84 @@
 - 下一步：扩充种子至 `500–509`（各10次），补充统计检验（配对 t / Wilcoxon）。
 - 验收：`experiments/run-...` 目录完整，`profit`、`on_time_rate` 等指标可计算
 
+## M7 阶段：强化适应度函数与PSO算法实现
+
+### M7.1 强化适应度函数（2025-01-01）
+- 目的：解决准时率偏低（接近0%）问题，通过增强软惩罚引导算法重视截止日期
+- 修改文件：`src/evaluation/fitness.py`
+- 主要改进：
+  - 增加`alpha_deadline`从0.5到1.5，`beta_late_units`从0.2到0.8
+  - 截止日期压力计算改为分段函数，对超期项目采用指数增长惩罚
+  - 延迟单位惩罚按订单价值加权，高价值订单延迟惩罚更重
+- 测试结果：为后续PSO算法提供更好的适应度引导
+
+### M7.2 实现粒子群优化（PSO）算法（2025-01-01）
+- 目的：增加算法对比，丰富论文实验内容，验证不同元启发式算法效果
+- 新增文件：`src/algorithms/pso.py`
+- 算法设计：
+  - 编码：连续空间，每个粒子维度对应订单优先级（[0,1]范围）
+  - 解码：基于优先级的EDD + 利润密度解码器
+  - 适应度：使用强化后的软适应度函数
+  - 参数：30粒子，200迭代，c1=c2=2.0，w从0.9线性递减到0.5
+- 集成文件：
+  - `src/main.py`：添加PSO参数和算法选择
+  - `src/experiments/runner.py`：添加PSO实验支持
+- 初步测试：
+  - 命令：`python -m src.main --pso_enabled --pso_particles 20 --pso_iterations 50 --soft_deadline --soft_alpha 1.5 --soft_beta 0.8 --exp_tag test-pso --seed 42`
+  - 结果：利润48,180，按时完成率75%，罚款比例25%
+  - 对比：显著优于GA（通常按时完成率~0%）
+- 下一步：进行完整对比实验（30次运行），测试不同订单紧迫度场景
+
 注：批量运行器 `src/experiments/runner.py` 属于后续批量实验（计划M6），我们已提前实现用于验证与统计，其参数会自动映射到 `src.main` 的短旗标。
+
+## M8 阶段：不同订单紧迫度场景对比实验（2025-01-02）
+
+### M8.1 场景数据生成
+- 目的：创建不同订单紧迫度场景（宽松loose、中等medium、紧迫tight）用于算法对比
+- 新增文件：`src/data/scenario_generator.py`
+- 主要功能：
+  - 根据紧迫度参数调整订单交付期限分布
+  - 生成对应场景的配置和订单数据
+  - 保存为JSON格式供后续实验使用
+- 生成结果：
+  - `data/scenarios/orders_loose.json`：平均交付期限2.9天
+  - `data/scenarios/orders_medium.json`：平均交付期限1.4天
+  - `data/scenarios/orders_tight.json`：平均交付期限1.4天
+  - 对应的配置文件：`config_loose.json`、`config_medium.json`、`config_tight.json`
+
+### M8.2 场景对比实验运行
+- 目的：在所有场景下运行 GA、GA-VNS、GA-VNS-SA、PSO 算法各 30 次
+- 运行命令：`python -m src.experiments.scenario_runner`
+- 实验规模：3 场景 × 4 算法 × 30 次 = 360 次实验
+- 结果目录：`experiments/run-*-loose-m6s3/`、`experiments/run-*-medium-m6s3/`、`experiments/run-*-tight-m6s3/`
+- 状态更新（2025-01-02）：已完成聚合与统计，详见下文 M8.3
+
+### M8.3 数据聚合与统计输出（2025-01-02）
+- 目的：将三场景×四算法×30 次运行的 `metrics.json` 聚合为批量 CSV 并生成统计表与图表
+- 脚本位置：`experiments/scripts/aggregate_m8_batches.py`、`compute_m8_averages.py`、`plot_m8_figures.py`
+- 操作步骤：
+  1) `python experiments/scripts/aggregate_m8_batches.py`（生成/更新 `experiments/batch_*_summary.csv`）
+  2) `python experiments/scripts/compute_m8_averages.py`（计算均值±标准差并打印到控制台）
+  3) `python experiments/scripts/plot_m8_figures.py`（输出四张图与总结表到 `experiments/m8_plots/`）
+- 验收：`experiments/m8_plots/m8_summary_table.md` 与四张图存在，样本数均为 30（每算法每场景）；若 PSO 某场景标准差为 0，属当前设置下的稳定最优表现。
+
+### PSO 随机种子验证与重跑策略
+- 随机种子：`src/main.py` 在入口处调用 `random.seed(args.seed)`，PSO 使用 `random.uniform/random.random`，已受 `--seed` 控制。
+- 若需增强随机性或区分不同种子的表现：可在 `src/algorithms/pso.py` 的优先级或槽位吸引度排序中加入微小随机抖动，或调整 `w/c1/c2/max_vel` 等参数扩大搜索空间。
+- 是否需要重做 M8：
+  - 不改算法逻辑/参数时：无需重做，当前聚合与统计已完成。
+  - 修改 PSO 随机性或参数后：仅重跑 PSO 的三场景×30 次即可（GA/GA+VNS/GA+VNS+SA 保持不变）。
+- 重跑 PSO 示例（按场景）：
+  - `python -m src.experiments.runner --exp_tag pso-loose-m6s3 --scenario loose --append_scenario_to_tag --pso_enabled --pso_particles 20 --pso_iterations 50 --soft_deadline --soft_alpha 1.5 --soft_beta 0.8 --seed-start 2000 --seed-end 2029 --runs_dir experiments --outdir results`
+  - `python -m src.experiments.runner --exp_tag pso-medium-m6s3 --scenario medium --append_scenario_to_tag --pso_enabled --pso_particles 20 --pso_iterations 50 --soft_deadline --soft_alpha 1.5 --soft_beta 0.8 --seed-start 2000 --seed-end 2029 --runs_dir experiments --outdir results`
+  - `python -m src.experiments.runner --exp_tag pso-tight-m6s3 --scenario tight --append_scenario_to_tag --pso_enabled --pso_particles 20 --pso_iterations 50 --soft_deadline --soft_alpha 1.5 --soft_beta 0.8 --seed-start 2000 --seed-end 2029 --runs_dir experiments --outdir results`
+  - 然后按 M8.3 步骤更新聚合与图表。
+
+### M8 复盘与关键结论（更新）
+- 强化适应度函数是解决低准时率的关键：提高截止权重与软惩罚系数（例如提升 `alpha_deadline`、`beta_late_units`），三场景统计均验证其对提升准时率与降低罚金触发率的显著作用（见 `experiments/m8_plots/m8_summary_table.md`）。
+- 横向对比算法采用 PSO：在现有框架下实现并接入批量实验，作为论文的横向对比算法；PSO 的随机源受 `--seed` 控制。如需调整 PSO 的随机性或参数（`w/c1/c2/max_vel`），仅重跑 PSO 三场景×30 次，并按 M8.3 重新聚合与绘图，GA/GA+VNS/GA+VNS+SA 无需重跑。
+- 数据与图表位置：`experiments/m8_plots/`（含 `m8_summary_table.md` 与四张图），并已同步报告到 `paper/figures/m8_plots/m8_experiment_report.md`。
+- 验收更新：所有算法在三场景的样本数均为 30；若某场景标准差为 0，视为该设置下的稳定表现而非统计缺失。
 
 ## 1. 目标与结论快照
 - 目标：完成 M1 基线 GA 的“300 代长跑收敛验证”，使用 5 个不同 `seed`，并汇总指标的均值与标准差。
@@ -525,3 +602,50 @@ python -m src.experiments.runner --exp_tag ga-vns-sa-m6s2 \
 - `m6s2_utilization_rate_bars_by_scenario.png`：产线利用率均值±标准差（条形图）。
 - `m6s2_on_time_rate_bars_by_scenario.png`：准时率均值±标准差（条形图）。
 - `m6s2_penalty_rate_bars_by_scenario.png`：罚金触发率均值±标准差（条形图）。
+ 
+## M8 数值摘要与显著性（均值±标准差与配对t检验）
+
+- 数据源：
+  - LOOSE：`experiments/batch_ga-loose-m6s3_summary.csv`、`experiments/batch_ga-vns-loose-m6s3_summary.csv`、`experiments/batch_ga-vns-sa-loose-m6s3_summary.csv`、`experiments/batch_pso-loose-m6s3_summary.csv`
+  - MEDIUM：`experiments/batch_ga-medium-m6s3_summary.csv`、`experiments/batch_ga-vns-medium-m6s3_summary.csv`、`experiments/batch_ga-vns-sa-medium-m6s3_summary.csv`、`experiments/batch_pso-medium-m6s3_summary.csv`
+  - TIGHT：`experiments/batch_ga-tight-m6s3_summary.csv`、`experiments/batch_ga-vns-tight-m6s3_summary.csv`、`experiments/batch_ga-vns-sa-tight-m6s3_summary.csv`、`experiments/batch_pso-tight-m6s3_summary.csv`
+
+- 说明：均为每算法每场景 n=30 的样本，均值±标准差由 `experiments/scripts/compute_m8_averages.py` 输出；显著性为“与 GA 基准的配对 t 检验”，由 `experiments/scripts/compute_m8_tests.py` 输出（ns: 不显著；*: p<0.05；***: p<0.001）。
+
+### LOOSE 场景（n=30）
+- GA：`profit=-39050.33±8135.48`，`util=0.65±0.04`，`on_time=0.33±0.10`，`penalty=0.67±0.10`
+- GA+VNS：`profit=-41824.67±7501.53`，`util=0.64±0.05`，`on_time=0.34±0.12`，`penalty=0.66±0.12`
+- GA+VNS+SA：`profit=38454.43±14191.17`，`util=0.91±0.03`，`on_time=0.62±0.06`，`penalty=0.38±0.06`
+- PSO：`profit=75926.10±3134.79`，`util=0.80±0.01`，`on_time=0.63±0.04`，`penalty=0.37±0.04`
+- 显著性（相对 GA）：
+  - 利润：GA+VNS `p=0.085` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+  - 利用率：GA+VNS `p=0.482` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+  - 准时率：GA+VNS `p=0.762` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+  - 罚金率：GA+VNS `p=0.762` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+- 结论：PSO 与 GA+VNS+SA 在准时率与罚金率上均显著优于 GA；PSO 在利润上显著最高，GA+VNS+SA 在利用率上显著最高。
+
+### MEDIUM 场景（n=30）
+- GA：`profit=2422.67±3807.17`，`util=0.60±0.03`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+- GA+VNS：`profit=2454.00±3919.19`，`util=0.61±0.03`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+- GA+VNS+SA：`profit=4930.67±5552.44`，`util=0.63±0.08`，`on_time=0.07±0.14`，`penalty=0.93±0.14`
+- PSO：`profit=-12093.00±0.00`，`util=0.49±0.00`，`on_time=0.25±0.00`，`penalty=0.75±0.00`
+- 显著性（相对 GA）：
+  - 利润：GA+VNS `p=0.947` ns；GA+VNS+SA `p=0.038` *；PSO `p=0.000` ***
+  - 利用率：GA+VNS `p=0.259` ns；GA+VNS+SA `p=0.014` *；PSO `p=0.000` ***
+  - 准时率：GA+VNS `p=1.000` ns；GA+VNS+SA `p=0.041` *；PSO `p=0.000` ***
+  - 罚金率：GA+VNS `p=1.000` ns；GA+VNS+SA `p=0.041` *；PSO `p=0.000` ***
+- 结论：在当前参数下，PSO 显著提升准时率与降低罚金率，但利用率与利润显著低；GA+VNS+SA 相对 GA 在利润、利用率、准时率上均有小幅显著改善。
+
+### TIGHT 场景（n=30）
+- GA：`profit=-17978.67±4614.08`，`util=0.49±0.04`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+- GA+VNS：`profit=-19858.33±4465.85`，`util=0.48±0.05`，`on_time=0.01±0.03`，`penalty=0.99±0.03`
+- GA+VNS+SA：`profit=-2498.27±13505.06`，`util=0.68±0.13`，`on_time=0.07±0.04`，`penalty=0.93±0.04`
+- PSO：`profit=-33856.00±0.00`，`util=0.42±0.00`，`on_time=0.25±0.00`，`penalty=0.75±0.00`
+- 显著性（相对 GA）：
+  - 利润：GA+VNS `p=0.136` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+  - 利用率：GA+VNS `p=0.302` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+  - 准时率：GA+VNS `p=1.000` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+  - 罚金率：GA+VNS `p=1.000` ns；GA+VNS+SA `p=0.000` ***；PSO `p=0.000` ***
+- 结论：PSO 与 GA+VNS+SA 均显著提升准时与降低罚金；PSO 在准时率上最高但利润最低；GA+VNS+SA 在利润与利用率上显著优于 GA。
+
+备注：MEDIUM/TIGHT 场景下 PSO 的标准差为 0，属当前参数与解码配置下的稳定最优/唯一最优表现；并非“未注入随机种子”。若调整 PSO 随机性（如 `w/c1/c2/max_vel` 或加入微小抖动），建议仅重跑 PSO 三场景×30 次并重新聚合与统计。
